--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <link rel="icon" href="../src/assets/icon/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Portfolio template made by Dahmouni Badre, available at GitHub"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Portfolio de MisterBacode">
+    <meta name="keywords" content="Developpement, frontend, service web et digital">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:description" content="Developpeur web front end">
+    <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/512px-Logo_of_Twitter.svg.png">
+    <meta name="twitter:site" content="@nisterbakka">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
